YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'false'", "'true'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "'{'", "'}'", "':'", "','", "'('", "')'", "'.'", 
                     "'@'", "'~'", "'+'", "'-'", "'*'", "'/'", "'='", "'<'", 
                     "'<='", "'<-'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "FALSE", "TRUE", "LET", "INTEGER", "ID", "TYPE", 
                      "STRING", "SEMICOLON", "OPENBRACE", "CLOSEBRACE", 
                      "COLON", "COMMA", "OPENPARENTHESES", "CLOSEPARENTHESES", 
                      "DOT", "AT", "TILDE", "ADD", "SUB", "MUL", "DIV", 
                      "EQUAL", "LT", "LTEQ", "ASSIGN", "SINGLECOMMENT", 
                      "MULTICOMMENT", "WS", "ERROR" ]

    RULE_program = 0
    RULE_classDefine = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_let_expr = 5

    ruleNames =  [ "program", "classDefine", "feature", "formal", "expr", 
                   "let_expr" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    INHERITS=6
    ISVOID=7
    LOOP=8
    POOL=9
    THEN=10
    WHILE=11
    NEW=12
    NOT=13
    FALSE=14
    TRUE=15
    LET=16
    INTEGER=17
    ID=18
    TYPE=19
    STRING=20
    SEMICOLON=21
    OPENBRACE=22
    CLOSEBRACE=23
    COLON=24
    COMMA=25
    OPENPARENTHESES=26
    CLOSEPARENTHESES=27
    DOT=28
    AT=29
    TILDE=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    EQUAL=35
    LT=36
    LTEQ=37
    ASSIGN=38
    SINGLECOMMENT=39
    MULTICOMMENT=40
    WS=41
    ERROR=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StartContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDefine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassDefineContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassDefineContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)



    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = YAPLParser.StartContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.classDefine()
                self.state = 13
                self.match(YAPLParser.SEMICOLON)
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_classDefine

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefClaseContext(ClassDefineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ClassDefineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE)
            else:
                return self.getToken(YAPLParser.TYPE, i)
        def OPENBRACE(self):
            return self.getToken(YAPLParser.OPENBRACE, 0)
        def CLOSEBRACE(self):
            return self.getToken(YAPLParser.CLOSEBRACE, 0)
        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)
        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefClase" ):
                listener.enterDefClase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefClase" ):
                listener.exitDefClase(self)



    def classDefine(self):

        localctx = YAPLParser.ClassDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDefine)
        self._la = 0 # Token type
        try:
            localctx = YAPLParser.DefClaseContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(YAPLParser.CLASS)
            self.state = 20
            self.match(YAPLParser.TYPE)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 21
                self.match(YAPLParser.INHERITS)
                self.state = 22
                self.match(YAPLParser.TYPE)


            self.state = 25
            self.match(YAPLParser.OPENBRACE)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 26
                self.feature()
                self.state = 27
                self.match(YAPLParser.SEMICOLON)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.CLOSEBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def OPENPARENTHESES(self):
            return self.getToken(YAPLParser.OPENPARENTHESES, 0)

        def CLOSEPARENTHESES(self):
            return self.getToken(YAPLParser.CLOSEPARENTHESES, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE(self):
            return self.getToken(YAPLParser.TYPE, 0)

        def OPENBRACE(self):
            return self.getToken(YAPLParser.OPENBRACE, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def CLOSEBRACE(self):
            return self.getToken(YAPLParser.CLOSEBRACE, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(YAPLParser.ID)
                self.state = 37
                self.match(YAPLParser.OPENPARENTHESES)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 38
                    self.formal()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==25:
                        self.state = 39
                        self.match(YAPLParser.COMMA)
                        self.state = 40
                        self.formal()
                        self.state = 45
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 48
                self.match(YAPLParser.CLOSEPARENTHESES)
                self.state = 49
                self.match(YAPLParser.COLON)
                self.state = 50
                self.match(YAPLParser.TYPE)
                self.state = 51
                self.match(YAPLParser.OPENBRACE)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(YAPLParser.CLOSEBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(YAPLParser.ID)
                self.state = 56
                self.match(YAPLParser.COLON)
                self.state = 57
                self.match(YAPLParser.TYPE)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==38:
                    self.state = 58
                    self.match(YAPLParser.ASSIGN)
                    self.state = 59
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_formal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FormlContext(FormalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.FormalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)
        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)
        def TYPE(self):
            return self.getToken(YAPLParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForml" ):
                listener.enterForml(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForml" ):
                listener.exitForml(self)



    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            localctx = YAPLParser.FormlContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(YAPLParser.ID)
            self.state = 65
            self.match(YAPLParser.COLON)
            self.state = 66
            self.match(YAPLParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def ADD(self):
            return self.getToken(YAPLParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)


    class SubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def SUB(self):
            return self.getToken(YAPLParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)


    class VoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoid" ):
                listener.enterVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoid" ):
                listener.exitVoid(self)


    class InvertContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TILDE(self):
            return self.getToken(YAPLParser.TILDE, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvert" ):
                listener.enterInvert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvert" ):
                listener.exitInvert(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class MulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def MUL(self):
            return self.getToken(YAPLParser.MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)


    class FactExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPENPARENTHESES(self):
            return self.getToken(YAPLParser.OPENPARENTHESES, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)

        def CLOSEPARENTHESES(self):
            return self.getToken(YAPLParser.CLOSEPARENTHESES, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactExpr" ):
                listener.enterFactExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactExpr" ):
                listener.exitFactExpr(self)


    class LteqContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def LTEQ(self):
            return self.getToken(YAPLParser.LTEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLteq" ):
                listener.enterLteq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLteq" ):
                listener.exitLteq(self)


    class FalseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)


    class LtContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def LT(self):
            return self.getToken(YAPLParser.LT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLt" ):
                listener.enterLt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLt" ):
                listener.exitLt(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)
        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def DIV(self):
            return self.getToken(YAPLParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)


    class EqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(YAPLParser.EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)


    class NewObjectContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)
        def TYPE(self):
            return self.getToken(YAPLParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewObject" ):
                listener.enterNewObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewObject" ):
                listener.exitNewObject(self)


    class TrueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)


    class BlockContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPENBRACE(self):
            return self.getToken(YAPLParser.OPENBRACE, 0)
        def CLOSEBRACE(self):
            return self.getToken(YAPLParser.CLOSEBRACE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)


    class LetContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)
        def let_expr(self):
            return self.getTypedRuleContext(YAPLParser.Let_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet" ):
                listener.enterLet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet" ):
                listener.exitLet(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class IfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(YAPLParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)
        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)
        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)


    class AssignContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)


    class OwnMethodCallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)
        def OPENPARENTHESES(self):
            return self.getToken(YAPLParser.OPENPARENTHESES, 0)
        def CLOSEPARENTHESES(self):
            return self.getToken(YAPLParser.CLOSEPARENTHESES, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOwnMethodCall" ):
                listener.enterOwnMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOwnMethodCall" ):
                listener.exitOwnMethodCall(self)


    class INTEGERContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(YAPLParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINTEGER" ):
                listener.enterINTEGER(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINTEGER" ):
                listener.exitINTEGER(self)

